--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <section class="conteudo-principal"></section>
-    <h2 class="titulo-principal">Meus objetivos do ano_</h2>
+    <h2 class="titulo-principal">Meus objetivos do ano<span>_</span></h2>
     <div class="botoes"></div>
         <button class="botao">Cursos no Alura</button>
         <button class="botao">Criar Projetos em Javascript</button>
@@ -18,3 +18,4 @@
     
 </body>
 </html>
+
